--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+html {
+    overflow-x: hidden!important;
+}
 body {
     overflow-x: hidden;
     background-color: #040c1f;
@@ -7,22 +10,51 @@ h1 {
     color: #05f2f2;
 }
 .page-header {
-    border-bottom: 1px solid #05f2f2;
+    border-bottom: 0.1rem solid #05f2f2;
 }
 input {
-    border: 1px solid #05f2f2!important;
+    border: 0.1rem solid #05f2f2!important;
     background-color: hsla(0,0%,100%,.04)!important;
-    height: 40px!important;
-    font-size: 17px!important;
+    height: 4rem!important;
+    font-size: 1.7rem!important;
     color: #05f2f2!important;
 }
 .btn-custom {
     color: rgb(4, 12, 31);
     background-color: #05f2f2;
     border-color: #05f2f2;
-    font-size: 19px;
+    font-size: 1.9rem;
     font-weight: 900;
 }
 div {
     margin: 0 auto;
+}
+.form-horizontal .form-group {
+    margin-right: 0;
+    margin-left: 0;
+}
+.col-sm-4 {
+    position: relative;
+    min-height: 0.1rem;
+    padding-right: 0.8rem;
+    padding-left: 0.8rem;
+}
+.form-group {
+    margin:2rem 0 2rem 0;
+}
+.page-header {
+    padding-bottom: 0.9rem;
+    margin: 4rem 0 2rem 0;
+}
+.zic {
+    font-size: 3rem;
+}
+.baseBarChart {
+    width: 90rem;
+    height:40rem;
+}
+.info {
+    color: #05f2f2;
+    font-size: 22px;
+    margin-left: 10px;
 }
